Added login functionality prototype. Need to get it working with db still

--- a/homescreen.ui
+++ b/homescreen.ui
@@ -106,6 +106,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="librarianLoginButton">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>130</y>
+      <width>80</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -113,7 +126,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
