--- a/displaybooks.ui
+++ b/displaybooks.ui
@@ -39,12 +39,12 @@
       <rect>
        <x>10</x>
        <y>0</y>
-       <width>221</width>
-       <height>16</height>
+       <width>241</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>Welcome,  Student/Librarian here</string>
+      <string/>
      </property>
     </widget>
     <widget class="QGroupBox" name="groupBox">
