--- a/UnitTesting/librarianaccountpage.ui
+++ b/UnitTesting/librarianaccountpage.ui
@@ -104,6 +104,20 @@
     <string>PushButton</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="logout">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>200</y>
+     <width>81</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>PushButton</string>
+   </property>
+  </widget>
+
   <widget class="QPushButton" name="searchByISBNButton">
    <property name="geometry">
     <rect>
@@ -117,6 +131,7 @@
     <string>PushButton</string>
    </property>
   </widget>
+
  </widget>
  <resources/>
  <connections/>
