--- a/displaybooks.ui
+++ b/displaybooks.ui
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>30</y>
      <width>271</width>
-     <height>391</height>
+     <height>381</height>
     </rect>
    </property>
    <property name="widgetResizable">
@@ -31,7 +31,7 @@
       <x>0</x>
       <y>0</y>
       <width>269</width>
-      <height>389</height>
+      <height>379</height>
      </rect>
     </property>
     <widget class="QLabel" name="welcome_lbl">
@@ -190,9 +190,9 @@
     <widget class="QPushButton" name="search_btn">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>190</x>
        <y>290</y>
-       <width>113</width>
+       <width>71</width>
        <height>32</height>
       </rect>
      </property>
@@ -204,9 +204,9 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>330</y>
-       <width>231</width>
-       <height>51</height>
+       <y>290</y>
+       <width>171</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -332,6 +332,206 @@
      </property>
      <property name="text">
       <string>Checkout</string>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QScrollArea" name="admin_panel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>370</y>
+     <width>271</width>
+     <height>131</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents_4">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>269</width>
+      <height>129</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="admin_panel_lbl">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>10</y>
+       <width>161</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Books ready to checkout</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="checkout_btn">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>70</y>
+       <width>121</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>checkout</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="checkout_combox">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>241</width>
+       <height>32</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QScrollArea" name="student_panel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>520</y>
+     <width>271</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents_5">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>269</width>
+      <height>39</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QScrollArea" name="student_overdue">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>670</y>
+     <width>271</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents_6">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>269</width>
+      <height>99</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="fines_admin_lbl">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>10</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pay your fines</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="overdue_comboBox">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>241</width>
+       <height>32</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="createfine_btn">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>60</y>
+       <width>113</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pay</string>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QScrollArea" name="admin_fines">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>560</y>
+     <width>271</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents_7">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>269</width>
+      <height>99</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="overdue_lbl_2">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>10</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Create Fine</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="fines_admin_comboBox">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>241</width>
+       <height>32</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pay_btn_2">
+     <property name="geometry">
+      <rect>
+       <x>112</x>
+       <y>60</y>
+       <width>131</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Create Fine</string>
      </property>
     </widget>
    </widget>
