--- a/homescreen.ui
+++ b/homescreen.ui
@@ -120,6 +120,20 @@
     </property>
    </widget>
   </widget>
+   <widget class="QPushButton" name="facultyLoginButton">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>130</y>
+      <width>80</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
