--- a/facultyaccountpage.ui
+++ b/facultyaccountpage.ui
@@ -52,7 +52,7 @@
     <string>PushButton</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="DisplayBooksButton">
+  <widget class="QPushButton" name="displayBooksButton">
    <property name="geometry">
     <rect>
      <x>90</x>
